--- a/das12.html
+++ b/das12.html
@@ -19,13 +19,13 @@
         <p>ghtning-fast loading times and smooth animations</p>
         <button class="mainbutton">Learn More</button>
       </div>
-      <div class="main-container">
+      <div class="main-container2">
         <span class="emoji">🚀</span>
         <h2>Fast Performance</h2>
         <p>ghtning-fast loading times and smooth animations</p>
         <button class="mainbutton">Learn More</button>
       </div>
-      <div class="main-container">
+      <div class="main-container3">
         <span class="emoji">🚀</span>
         <h2>Fast Performance</h2>
         <p>ghtning-fast loading times and smooth animations</p>
